--- a/migraine_css/dark.css
+++ b/migraine_css/dark.css
@@ -6,7 +6,7 @@ body:lang(dr) {background-color: #333; position: relative; }
 
 /*page header and username area*/
  /*Header color*/
-#header-bottom-left:lang(dr) { background-color: #3f3f3f;
+#header-bottom-left:lang(dr) { background-color: #545454;
 }
 /* User Bar */
 #header-bottom-right:lang(dr) { background-color: #333;
