--- a/chronicpain_css/dark.css
+++ b/chronicpain_css/dark.css
@@ -142,7 +142,15 @@ color:#d3d3d3;
 }
 
 /*username color*/
-.author:lang(dr) {color: #abad1d!important;}
+.author:lang(dr) {color: #abad1d!important;
+}
+/* Link colour in comments correlating to submitted comments colour */
+.comment:lang(dr) .md:lang(dr) p > a {
+color: #4977af;
+}
+.comment:lang(dr) .md:lang(dr) p > a:visited {
+color: #937773;
+}
 
 /* SIDEBAR! *//* SIDEBAR! *//* SIDEBAR! */
 /* SIDEBAR! *//* SIDEBAR! *//* SIDEBAR! */
