--- a/migraine_css/light.css
+++ b/migraine_css/light.css
@@ -179,6 +179,16 @@ color: #5a5555;
 /*text colors in sidebar*/
 .side:lang(li) {color: #5a5555;}
 
+/* Clicked linked colours for sidebar and announcement box */
+.listing-page:lang(li) .side:lang(li) .md:lang(li) a:visited {
+text-decoration: none;
+color: #937773;
+}
+.listing-page:lang(li) .side:lang(li) .md:lang(li) a:link {
+text-decoration: none;
+color: #3f5d84;
+}
+
 /* Post info box colours */
 .linkinfo:lang(li), .titlebox:lang(li) {
   background-color: transparent;
